# socialNetwork

./: db.sqlite3  pyproject.toml
myapp/: models.py  serializers.py  tests.py  views.py
myapp/migrations/: 0001_initial.py  0002_alter_user_profile_picture.py
myapp/tests/: filling_db.py
socialNetwork/: settings.py  urls.py
templates/: home.html
